Fetch device (kinda broken)
