# public/openapi.json
@@ -3290,6 +3290,53 @@
         "operationId": "internalDeviceModelsListGet"
       }
     },
+    "/thermostats/get": {
+      "post": {
+        "x-fern-sdk-group-name": ["thermostats"],
+        "x-fern-sdk-method-name": "get",
+        "x-fern-sdk-return-value": "thermostat",
+        "summary": "/thermostats/get",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "thermostat": { "$ref": "#/components/schemas/device" },
+                    "ok": { "type": "boolean" }
+                  },
+                  "required": ["thermostat", "ok"]
+                }
+              }
+            }
+          },
+          "400": { "description": "Bad Request" },
+          "401": { "description": "Unauthorized" }
+        },
+        "security": [
+          { "seam_workspace": [], "access_token": [] },
+          { "seam_client_session_token": [] },
+          { "client_session_token": [] }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "device_id": { "type": "string", "format": "uuid" },
+                  "name": { "type": "string" }
+                }
+              }
+            }
+          }
+        },
+        "tags": [],
+        "operationId": "thermostatsGetPost"
+      }
+    },
     "/thermostats/climate_setting_schedules/create": {
       "post": {
         "summary": "/thermostats/climate_setting_schedules/create",
